--- a/grp_theo_assignment_1/report.tex
+++ b/grp_theo_assignment_1/report.tex
@@ -254,4 +254,59 @@ level 4/.style={sibling distance = 2.2cm}
 ; 
 \end{tikzpicture}
 %%%%%%%%%% Step 2 end %%%%%%%%%%%%%
+
+\section*{Problem 4}
+We propose a data structure where we augment to every node of the exiting tree another value which is the predecessor of the node. Now for this data structure we will be able to maintain the log (n) time complexity for Insert, Delete and Query operations and yet find the required \textit{k} predecessor in  O (k + log (n)). Although for this we shall have to change the Insert and Delete operations a bit. The details for the same are as follows.\\
+\textbf{The tree}\\
+A normal RB tree where each node, in addition to its own value also stores the value of its predecessor. So the structure of each node is like\\
+\begin{lstlisting}[label={list:first},caption=Node Structure.]
+struct Node{
+  int val;
+  int pre;	// Value of predecessor
+  struct Node *left,*right;  
+};
+\end{lstlisting}
+\pagebreak
+Now the algorithms\\
+\textbf{Algorithm for \textit{k} predecessor}\\
+\begin{lstlisting}[label={list:first},caption=k predecessor, mathescape = true]
+void k_pred (int num_predecessor,int value_to_search, Node * root)
+{
+	key $\leftarrow$ value_to_search;
+	ptr $\leftarrow$ search (key, root);
+	if(ptr == NULL)
+		return;
+	k $\leftarrow$ num_predecessor;
+	print(ptr.pre);
+	k_pred ( k - 1, ptr.pre, root);
+}
+
+Node * search (int key, Node * root)
+{
+	p $\leftarrow$ root;
+	while(p != NULL)
+	{
+		if (p.val == key)
+			return p;
+		else if (p.val > key)
+			p $\leftarrow$ p.left;
+		else p $\leftarrow$ p.right;
+	}
+}
+\end{lstlisting}
+\\
+\textbf{Proof of correctness for \textit{k} predecessor}\\
+Since this is a recursive algorithm,  after every call the value that it prints is basically the immediate predecessor and the function sets up for \textit{k - 1} sequential calls. Thus, as after every call we have one predecessor and we have the next call then. This continues till we have exhausted all our calls which was equal to the number of the predecessors to print.
+Hence, we can conclude that this algorithm gives the correct outputs at the end of recursive calls.\\
+\\
+\textbf{Time Complexity for the above algorithm}\\
+For each query the search effectively does Binary Search and then returns the pointer to it. Thus its time complexity will be log (n) as is know. Now, each call of k\_pred takes T(k) time, such that T(k) = 4 * T(1) + T(k - 1) + O(log (n)).
+Hence, this algorithm is of \quad time O(k + k * log (n)).\\
+\\
+\textbf{Changes to Insert function}\\
+The only change we need to make in Insert is to search for the predecessor of the inserted value and augment this into the newly inserted node. Now, search for the predecessor shall be of order log (n), insert itself is of order log (n). Hence, insert is still done in O (log (n)).\\
+\\
+\textbf{Changes to Delete function}\\
+In deletion we need to store the predecessor of the deleted node in a temporary variable and then after deletion travel to the successor of the deleted node and change its predecessor from the previous value (equal to the deleted node) to the value stored in the temporary variable.
+This too similar to the above case will be done in O (log (n)).
 \end{document}
