--- a/grp_theo_assignment_1/report.tex
+++ b/grp_theo_assignment_1/report.tex
@@ -212,8 +212,8 @@ level 4/.style={sibling distance = 2.2cm}
 ] 
 \node [arn_n] {79}
     child{ node [arn_n] {35}
-        child{ node [arn_r] {22} 
-            child{ node [arn_n, name=leaf 5] {19}
+        child{ node [arn_n] {22} 
+            child{ node [arn_r, name=leaf 5] {19}
             	child{ node [arn_n] {10}
 					child{ node [arn_n] {4}
 						child{ node [arn_x] {}}
