--- a/grp_pro_assignment_3/report.tex
+++ b/grp_pro_assignment_3/report.tex
@@ -101,7 +101,7 @@ bindingoffset=0mm, top=20mm,bottom=20mm}
 
 \author{Harsh Sinha(14265), Deepak Gangwar(14208)}
 
-\date{30/03/2017}
+\date{1/04/2017}
 
 \maketitle
 
@@ -112,18 +112,18 @@ bindingoffset=0mm, top=20mm,bottom=20mm}
  \hline
   & $n = 10^2$ & $n = 10^3$ & $n = 10^4$ & $n = 10^5$ & $n = 10^6$\\ [0.5ex] 
  \hline\hline
- Average running time \\of QuickSort & 6 & 87837 & 787 & &\\ 
+ Average running time(Sec.) \\of QuickSort & $1.43 x 10^-5$ & $1.24 x 10^-4$ & $1.25 x 10^-3$ & $1.53 x 10^-2$ &\\ 
  \hline
- Average running time \\of MergeSort & 7 & 78 & 5415 & &\\
- \hline
- Average number of \\comparisons in
-QuickSort & 545 & 778 & 7507 & &\\
+ Average running time(Sec.) \\of MergeSort & $2.23 x 10^-5$ & $1.81 x 10^-4$ & $1.83 x 10^-3$ & $2.16 x 10^-2$ &\\
  \hline
  Average number of \\comparisons in
-MergeSort & 545 & 18744 & 7560 & &\\
+QuickSort & 346 & 5797 & 80443 & 1034672 &\\
+ \hline
+ Average number of \\comparisons in
+MergeSort & 269 & 4351 & 60226 & 768173 &\\
  \hline
  No. of times MergeSort \\had lesser no.
-of comparisons \\than QuickSort & 88 & 788 & 6344 & &\\ [1ex] 
+of comparisons \\than QuickSort & 946 & 1000 & 1000 & 1000 &\\ [1ex] 
  \hline
 \end{tabular}
 \end{center}
@@ -134,31 +134,31 @@ of comparisons \\than QuickSort & 88 & 788 & 6344 & &\\ [1ex]
  \hline
   & $n = 10^2$ & $n = 10^3$ & $n = 10^4$ & $n = 10^5$ & $n = 10^6$\\ [0.5ex] 
  \hline\hline
- Average running time \\of QuickSort & 6 & 87837 & 787 & &\\ 
+ Average running time(Sec.) \\of QuickSort & $1.43 x 10^-5$ & $1.24 x 10^-4$ & $1.25 x 10^-3$ & $1.53 x 10^-2$ &\\ 
  \hline
  Average number of \\comparisons in
-QuickSort & 545 & 778 & 7507 & &\\
+QuickSort & 346 & 5797 & 80443 & 1034672 &\\
  \hline
 Percentage of cases \\when running time
-of QuickSort \\exceeds average by 5\% & 545 & 18744 & 7560 & &\\
+of QuickSort \\exceeds average by 5\% & 777 & 736 & 866 & 961 &\\
  \hline
  Percentage of cases \\when running time
-of QuickSort \\exceeds average by 10\% & 545 & 18744 & 7560 & &\\
+of QuickSort \\exceeds average by 10\% & 96 & 41 & 6 & 23 &\\
  \hline
  Percentage of cases \\when running time
-of QuickSort \\exceeds average by 20\% & 545 & 18744 & 7560 & &\\
+of QuickSort \\exceeds average by 20\% & 46 & 65 & 25 & 5 &\\
  \hline
  Percentage of cases \\when running time
-of QuickSort \\exceeds average by 30\% & 545 & 18744 & 7560 & &\\
+of QuickSort \\exceeds average by 30\% & 27 & 49 & 45 & 1 &\\
  \hline
  Percentage of cases \\when running time
-of QuickSort \\exceeds average by 40\% & 545 & 18744 & 7560 & &\\
+of QuickSort \\exceeds average by 40\% & 18 & 43 & 31 & 3 &\\
  \hline
  Percentage of cases \\when running time
-of QuickSort \\exceeds average by 90\% & 545 & 18744 & 7560 & &\\
+of QuickSort \\exceeds average by 50\% & 18 & 9 & 9 & 1 &\\
  \hline
  Percentage of cases \\when running time
-of QuickSort \\exceeds average by 100\% & 545 & 18744 & 7560 & &\\
+of QuickSort \\exceeds average by 100\% & 11 & 35 & 16 & 4 &\\
  \hline
 \end{tabular}
 \end{center}
