--- a/grp_pro_assignment_3/report.tex
+++ b/grp_pro_assignment_3/report.tex
@@ -112,18 +112,18 @@ bindingoffset=0mm, top=20mm,bottom=20mm}
  \hline
   & $n = 10^2$ & $n = 10^3$ & $n = 10^4$ & $n = 10^5$ & $n = 10^6$\\ [0.5ex] 
  \hline\hline
- Average running time(Sec.) \\of QuickSort & $1.43 x 10^-5$ & $1.24 x 10^-4$ & $1.25 x 10^-3$ & $1.53 x 10^-2$ &\\ 
+ Average running time(Sec.) \\of QuickSort & $1.43 x 10^-5$ & $1.24 x 10^-4$ & $1.25 x 10^-3$ & $1.53 x 10^-2$ & $0.184$\\ 
  \hline
- Average running time(Sec.) \\of MergeSort & $2.23 x 10^-5$ & $1.81 x 10^-4$ & $1.83 x 10^-3$ & $2.16 x 10^-2$ &\\
- \hline
- Average number of \\comparisons in
-QuickSort & 346 & 5797 & 80443 & 1034672 &\\
+ Average running time(Sec.) \\of MergeSort & $2.23 x 10^-5$ & $1.81 x 10^-4$ & $1.83 x 10^-3$ & $2.16 x 10^-2$ & $0.2336$\\
  \hline
  Average number of \\comparisons in
-MergeSort & 269 & 4351 & 60226 & 768173 &\\
+QuickSort & 346 & 5797 & 80443 & 1034672 & 12672801\\
+ \hline
+ Average number of \\comparisons in
+MergeSort & 269 & 4351 & 60226 & 768173 & 9337284\\
  \hline
  No. of times MergeSort \\had lesser no.
-of comparisons \\than QuickSort & 946 & 1000 & 1000 & 1000 &\\ [1ex] 
+of comparisons \\than QuickSort & 946 & 1000 & 1000 & 1000 & 1000\\ [1ex] 
  \hline
 \end{tabular}
 \end{center}
@@ -134,31 +134,31 @@ of comparisons \\than QuickSort & 946 & 1000 & 1000 & 1000 &\\ [1ex]
  \hline
   & $n = 10^2$ & $n = 10^3$ & $n = 10^4$ & $n = 10^5$ & $n = 10^6$\\ [0.5ex] 
  \hline\hline
- Average running time(Sec.) \\of QuickSort & $1.43 x 10^-5$ & $1.24 x 10^-4$ & $1.25 x 10^-3$ & $1.53 x 10^-2$ &\\ 
+ Average running time(Sec.) \\of QuickSort & $1.43 x 10^-5$ & $1.24 x 10^-4$ & $1.25 x 10^-3$ & $1.53 x 10^-2$ & $0.184$\\ 
  \hline
  Average number of \\comparisons in
-QuickSort & 346 & 5797 & 80443 & 1034672 &\\
+QuickSort & 346 & 5797 & 80443 & 1034672 & 12672801\\
  \hline
 Percentage of cases \\when running time
-of QuickSort \\exceeds average by 5\% & 777 & 736 & 866 & 961 &\\
+of QuickSort \\exceeds average by 5\% & 777 & 736 & 866 & 961 & 925\\
  \hline
  Percentage of cases \\when running time
-of QuickSort \\exceeds average by 10\% & 96 & 41 & 6 & 23 &\\
+of QuickSort \\exceeds average by 10\% & 96 & 41 & 6 & 23 & 59\\
  \hline
  Percentage of cases \\when running time
-of QuickSort \\exceeds average by 20\% & 46 & 65 & 25 & 5 &\\
+of QuickSort \\exceeds average by 20\% & 46 & 65 & 25 & 5 & 11\\
  \hline
  Percentage of cases \\when running time
-of QuickSort \\exceeds average by 30\% & 27 & 49 & 45 & 1 &\\
+of QuickSort \\exceeds average by 30\% & 27 & 49 & 45 & 1 & 5\\
  \hline
  Percentage of cases \\when running time
-of QuickSort \\exceeds average by 40\% & 18 & 43 & 31 & 3 &\\
+of QuickSort \\exceeds average by 40\% & 18 & 43 & 31 & 3 & 0\\
  \hline
  Percentage of cases \\when running time
-of QuickSort \\exceeds average by 50\% & 18 & 9 & 9 & 1 &\\
+of QuickSort \\exceeds average by 50\% & 18 & 9 & 9 & 1 & 0\\
  \hline
  Percentage of cases \\when running time
-of QuickSort \\exceeds average by 100\% & 11 & 35 & 16 & 4 &\\
+of QuickSort \\exceeds average by 100\% & 11 & 35 & 16 & 4 & 0\\
  \hline
 \end{tabular}
 \end{center}
