--- a/grp_pro_assignment_3/report.tex
+++ b/grp_pro_assignment_3/report.tex
@@ -55,7 +55,7 @@ bindingoffset=0mm, top=20mm,bottom=20mm}
 \lhead{}
 \chead{}
 \rhead{}
-\lfoot{Assignment \textnumero{} 2}
+\lfoot{Assignment \textnumero{} 3}
 \cfoot{}
 \rfoot{Page \thepage}
 \renewcommand{\headrulewidth}{0pt}
@@ -101,7 +101,7 @@ bindingoffset=0mm, top=20mm,bottom=20mm}
 
 \author{Harsh Sinha(14265), Deepak Gangwar(14208)}
 
-\date{1/04/2017}
+\date{01/04/2017}
 
 \maketitle
 
@@ -112,9 +112,9 @@ bindingoffset=0mm, top=20mm,bottom=20mm}
  \hline
   & $n = 10^2$ & $n = 10^3$ & $n = 10^4$ & $n = 10^5$ & $n = 10^6$\\ [0.5ex] 
  \hline\hline
- Average running time(Sec.) \\of QuickSort & $1.43 x 10^-5$ & $1.23 x 10^-4$ & $1.27 x 10^-3$ & $1.53 x 10^-2$ & $0.185568$\\ 
+ Average running time(Sec.) \\of QuickSort & $1.43 * 10^-5$ & $1.23 * 10^-4$ & $1.27 * 10^-3$ & $1.53 * 10^-2$ & $0.185568$\\ 
  \hline
- Average running time(Sec.) \\of MergeSort & $1.97 x 10^-5$ & $1.62 x 10^-4$ & $1.66 x 10^-3$ & $1.95 x 10^-2$ & $0.235445$\\
+ Average running time(Sec.) \\of MergeSort & $1.97 * 10^-5$ & $1.62 * 10^-4$ & $1.66 * 10^-3$ & $1.95 * 10^-2$ & $0.235445$\\
  \hline
  Average number of \\comparisons in
 QuickSort & 353 & 5753 & 79443 & 1027068 & 12490416\\
@@ -128,13 +128,15 @@ of comparisons \\than QuickSort & 938 & 999 & 1000 & 1000 & 1000\\ [1ex]
 \end{tabular}
 \end{center}
 
+\p{}
+
 \subsection*{Part B}
 \begin{center}
  \begin{tabular}{||c c c c c c||} 
  \hline
   & $n = 10^2$ & $n = 10^3$ & $n = 10^4$ & $n = 10^5$ & $n = 10^6$\\ [0.5ex] 
  \hline\hline
- Average running time(Sec.) \\of QuickSort & $1.43 x 10^-5$ & $1.23 x 10^-4$ & $1.27 x 10^-3$ & $1.53 x 10^-2$ & $0.185568$\\ 
+ Average running time(Sec.) \\of QuickSort & $1.43 * 10^-5$ & $1.23 * 10^-4$ & $1.27 * 10^-3$ & $1.53 * 10^-2$ & $0.185568$\\ 
  \hline
  Average number of \\comparisons in
 QuickSort & 353 & 5797 & 80443 & 1034672 & 12490416\\
@@ -162,6 +164,8 @@ of QuickSort \\exceeds average by 100\% & 11 & 79 & 11 & 0 & 0\\
  \hline
 \end{tabular}
 \end{center}
+
+\p{For each value of n, average values and exceed percentages have been determined for 1000 iterations. It can be seen from average run time and average comparison values of Quick sort that it is of the order $O(nlogn)$.\\ As array size increases, run time values for each different array gets closer to average for that array size. Also, for same array size, run time values exceeding a certain percentage decreases asymptotically.}
 
 \section*{Problem 2}
 \subsection*{Part A}
@@ -200,7 +204,7 @@ void Query(i,j,b){
 \textbf{Time Complexity: }\\
 Let the size of input array is \textbf{n} and number of queries is \textbf{q}.\\
 \[T_{Op}(n) = cn + 3 * T_{Op}(n/3) \textit{\ and\ } T_{Op}(1) = 1 \]
-\[\implies T_{Op}(n) = nlogn\]\\
+\[\implies T_{Op}(n) = O(nlogn)\]\\
 Preprocessing for Query is O(n).\\
 \[T_{Query} = q * O(1)\\\]
 \[\implies T_{Query} = O(q)\]\\
